Refactor css organization and material theme

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,21 +1,24 @@
-<div class="content">
-    <h2 class="pageHeader">Contact me at <a target="_blank" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>
-        for any questions and inquiries.</h2>
-    <h3 class="pageIntro">Join the discord to stay up to date on the system, games that are being run,
-        and the community.</h3>
+<div class="title">
+    <h1 class="pageHeader">Contact us at <a href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>
+        for any questions and inquiries.
+    </h1>
     <div class="social">
-        <a mat-icon-button color="primary" target="_blank"
-            href="https://discord.com/channels/567897304908955649/1021927716750098482">
+        <a mat-icon-button color="primary" target="_blank" href="https://discord.gg/UnEKqTx">
             <i class="fa-brands fa-discord"></i>
         </a>
-        <a mat-icon-button color="primary" target="_blank" href="mailto:vgtimis133@gmail.com">
+        <a mat-icon-button color="primary" href="mailto:vgtimis133@gmail.com">
             <i class="fa-solid fa-envelope"></i>
         </a>
     </div>
-    <p></p>
-    <div class="discordWidget">
-        <iframe src="https://discord.com/widget?id=702322606145142846&theme=dark" width="350" height="500"
-            allowtransparency="true" frameborder="0"
-            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</div>
+<div class="content">
+    <div class="discord">
+        <p>Join the discord to stay up to date on the system, games that are being run,
+            and the community.</p>
+        <div class="discord-widget">
+            <iframe src="https://discord.com/widget?id=567897304908955649&theme=dark" width="350" height="500"
+                allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
     </div>
 </div>
