--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
 
 <div class="content">
     <div class="cards">
-        <img src="/assets/images/artwork/Twinblade F WEB.png">
+        <img src="assets/images/artwork/Twinblade F WEB.png">
         <div class="lefty">
             <h3>Kill your friends!</h3>
             <p>A full-system table top roll playing experience inspired by the Elden Ring and Soulsborne games</p>
@@ -17,10 +17,10 @@
                 of adversaries over the course of fights in order to dodge out of the way of attacks and counter
                 with their own attacks and skills.</p>
         </div>
-        <img src="/assets/images/maps/DS 600 A.C.W (Cormia, Zoomed).jpg">
+        <img src="assets/images/maps/DS 600 A.C.W (Cormia, Zoomed).jpg">
     </div>
     <div class="cards">
-        <img src="/assets/images/artwork/WPNProfs_Page1.png">
+        <img src="assets/images/artwork/WPNProfs_Page1.png">
         <div class="lefty">
             <h3>Kill your friends!</h3>
             <p>Capture the feeling of building your character into a unique class of your own creation.
@@ -34,6 +34,6 @@
             <h3>Kill your friends!</h3>
             <p>So many regrets to have!</p>
         </div>
-        <img src="/assets/images/artwork/Hex F WEB.png">
+        <img src="assets/images/artwork/Hex F WEB.png">
     </div>
 </div>
