--- a/src/app/play-info/play-info.component.html
+++ b/src/app/play-info/play-info.component.html
@@ -1,7 +1,9 @@
+<div class="title">
+    <h1>Join a game as a player now, or have a game run for you and a group of friends!</h1>
+    <p>Join the discord community to discuss the system and currently running games,
+        or contact us directly at <a target="_blank" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>.</p>
+</div>
 <div class="content">
-    <h2 class="pageHeader">Join a game as a player now, or have a game run for you and a group of friends!</h2>
-    <h3 class="pageIntro">Join the discord community to discuss the system and currently running games,
-        or contact us directly at <a target="_blank" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>.</h3>
     <div class="social">
         <a mat-icon-button color="primary" target="_blank"
             href="https://discord.com/channels/567897304908955649/1021927716750098482">
@@ -13,9 +15,9 @@
     </div>
     <p>To join or organize a game, 
         and for pricing info contact <a target="_blank" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a></p>
-    <div class="discordWidget">
-        <iframe src="https://discord.com/widget?id=702322606145142846&theme=dark" width="350" height="500"
-            allowtransparency="true" frameborder="0"
-            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <div class="discord-widget">
+        <iframe src="https://discord.com/widget?id=567897304908955649&theme=dark" width="350" height="500" 
+        allowtransparency="true" frameborder="0" 
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>
 </div>
