--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -1,8 +1,14 @@
+<div class="title">
+    <h1>Support Souls D20</h1>
+    <p>Look forward to more content like book materials, a monster manual, character sheets,
+        a patreon with exclusive rewards and more!</p>
+</div>
 <div class="content">
-    <h2 class="pageHeader">Donations will help fund more great art and any further design for the book!</h2>
-    <h3 class="pageIntro">Look forward to more content like book materials, a monster manual, 
-        a patreon with exclusive rewards and more!</h3>
+    <div class="paypal">
+        <span class="donations">
+            <h3>Donations</h3>
+            <p>Donations will help fund more great art and any further design for the book!</p>
+        </span>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/1200px-PayPal.svg.png">
-    <p>Bio bio bio bio bio? Bio bio bio bio bio? Bio bio bio bio bio?
-        Bio bio bio bio bio? Bio bio bio bio bio? Bio bio bio bio bio? Yes... BIO!</p>
+    </div>
 </div>
