--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-
-html,
-body {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: Imperial-BT, Roboto, "Helvetica Neue", sans-serif;
-    background-color: #202020;
-}
-
-@import "~@angular/cdk/overlay-prebuilt.css";
-
-.ks-modal-gallery-backdrop {
-    background: #000 !important;
-    ;
-    opacity: 0.85 !important;
-    ;
-}
-
-.ks-modal-gallery-panel {
-    z-index: 90000 !important;
+:root {
+    --white: #F0F0F0;
+    --black: #202020;
+    --gold: #b99933;
+    --red: #B95633;
 }
 
 @font-face {
@@ -30,16 +11,67 @@ body {
     src: url("/assets/fonts/ebgaramond-semibold-webfont.woff2") format("woff2"),
         url("/assets/fonts/ebgaramond-semibold-webfont.woff") format("woff");
 }
+
 @font-face {
     font-family: "Mantinia";
     src: url("/assets/fonts/mantinia-regular.otf");
     src: url("/assets/fonts/mantinia-regular-webfont.woff2") format("woff2"),
         url("/assets/fonts/mantinia-regular-webfont.woff") format("woff");
 }
-h1, h2, h3, h4, h5, p {
-    font-family: EBGaramond;
+
+html,
+body {
+    height: 100%;
 }
+
+body {
+    margin: 0;
+    font-family: EBGaramond, Imperial-BT, Roboto, "Helvetica Neue", sans-serif;
+    background-image: linear-gradient(45deg, #102027, var(--black));
+}
+
+h1 {
+    color: var(--gold);
+    text-align: center;
+    font-size: 2.25em;
+}
+
+h2 {
+    color: var(--white);
+    text-align: center;
+    font-size: 2em;
+}
+
+h3 {
+    color: var(--gold);
+    font-size: 1.75em;
+}
+
 a {
-    color: #b99449;
-    text-decoration: underline;
+    color: var(--gold);
+    text-decoration: none;
+}
+
+p {
+    color: var(--white);
+    font-size: 1.5em;
+    margin: 20px;
+}
+
+.title {
+    width: 100%;
+    height: 200px;
+    padding-top: 120px;
+}
+
+.content {
+    width: 100%;
+    margin-bottom: 166px;
+    padding-top: 20px;
+}
+
+.page-intro {
+    /* width: 100%;
+    height: 200px;
+    padding-top: 120px; */
 }
