--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,12 @@
-app-header {
-    height: inherit;
-    width: 100%;
-}
 mat-toolbar {
     position: fixed;
-    /* background-color: #D3D3D3; */
+    border-bottom: 1.5px solid var(--gold);
+    height: 64px;
+    width: 100%;
+    z-index: 9;
+}
+
+app-header {
+    height: inherit;
+    width: inherit;
 }
