--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-
-<mat-toolbar><app-header></app-header></mat-toolbar>
+<mat-toolbar>
+    <app-header></app-header>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
-
 
 <app-footer></app-footer>
