--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <header id="mainHeader">
     <!-- <div class="hexagon" id="hexagon"></div> -->
     <nav>
-        <a routerLink="/info">Info</a>
-        <a routerLink="/play">Play</a>
-        <a routerLink="" class="flame">
-            <img id="mainLogo" src="/assets/images/logos/SoulsD20 LOGO Color.png">
+        <a routerLink="/info" routerLinkActive="active" class="nav-link">Info</a>
+        <a routerLink="/play" routerLinkActive="active" class="nav-link">Play</a>
+        <a routerLink="">
+            <img id="mainLogo" src="assets/images/logos/SoulsD20 LOGO Color.png">
         </a>
-        <a routerLink="/support">Support</a>
-        <a routerLink="/contact">Contact</a>
+        <a routerLink="/support" routerLinkActive="active" class="nav-link">Support</a>
+        <a routerLink="/contact" routerLinkActive="active" class="nav-link">Contact</a>
     </nav>
 </header>
