--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,11 +1,12 @@
 .title {
-    width: 100%;
-    height: 320px;
     background-position: 50% 60px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 50%;
-    background-image: url("/assets/images/logos/SoulsD20 Title Color.png");
+    background-image: url("https://j-watt.github.io/souls-d20/assets/images/logos/SoulsD20 Title Color.png");
+}
+.content {
+    border-top: 1.5px solid var(--gold);
 }
 #mainTitle {
     width: 100%;
@@ -37,11 +38,7 @@
     top: 0;
 }
 
-.content {
-    border-top: 1.5px solid #b99449;
-    margin-bottom: 100px;
-    padding-top: 20px;
-}
+
 .content .cards div {
     margin: 50px 100px;
     width: 500px;
