--- a/src/app/support/support.component.css
+++ b/src/app/support/support.component.css
@@ -1,28 +1,19 @@
-.pageIntro {
-    color: whitesmoke;
-    width: 50%;
-    text-align: center;
-    margin: 20px auto 100px auto;
-}
-.content {
-    border-top: 1.5px solid #b99449;
-    margin-bottom: 100px;
-    padding-top: 120px;
+.title p {
+    margin: 20px auto;
+    max-width: 750px;
     text-align: center;
 }
-h2 {
-    color: #b99449;
+.paypal {
+    display: flex;
+    justify-content: center;
     text-align: center;
 }
-h3 {
-    color: whitesmoke;
-    text-align: center;
+
+.donations {
+    max-width: 500px;
 }
-p {
-    color: whitesmoke;
-    text-align: center;
-    margin-bottom: 260px;
-}
+
 img {
     width: 300px;
+    height: fit-content;
 }
