Add responsive layout and cleanup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     <app-header></app-header>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 
 <app-footer></app-footer>
