--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,21 @@
 <div class="footer">
-    <a [href]="'#'">Copyright</a>
-    <a [href]="'#'">Copyright</a>
-    <a [href]="'#'">Copyright</a>
-    <a [href]="'#'">Dance</a>
+    <span>
+        <p>Copyright 2023 by Timjan Kalajdzievski</p>
+        <p>Art copyright 2023 by <a (click)="openBottomSheet()">Kevin Bannister</a></p>
+        <p>Layout and design by Jordan Watt</p>
+        <p>Cover design by <a (click)="openBottomSheet()">Kevin Bannister</a></p>
+    </span>
+    <div style="display: flex; align-items: center;">
+        <div class="social">
+            <a mat-icon-button color="primary" target="_blank" href="https://discord.gg/UnEKqTx">
+                <i class="fa-brands fa-discord"></i>
+            </a>
+            <a mat-icon-button color="primary" href="mailto:vgtimis133@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+        </div>
+        <a routerLink="">
+            <img class="main-logo" src="assets/images/logos/SoulsD20 LOGO Color.png">
+        </a>
+    </div>
 </div>
