--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -1,22 +1,112 @@
 <div class="title">
-    <h3 class="pageIntro">The full book includes over 170 pages of resources, such as spells lists, equipment
-        and weapons lists, skill and ability trees, quick guides for leveling and building a character!</h3>
+    <h1>
+        Souls D20 is a full-system table top roll playing experience inspired by the Elden Ring and Soulsborne games.
+    </h1>
+    <p>
+        With strategic combat and highly customizable character builds, Souls D20 can be played in person or
+        online using the Handbook for a complete ruleset as well as resources!
+    </p>
 </div>
 <div class="content">
-    <div class="cards">
-        <div class="righty">
-            <h3>Check out the system preview!</h3>
+    <div class="preview-download">
+        <div>
+            <h2>Check out the system preview!</h2>
             <p>Take a peak inside the system with the available preview!
                 Souls D20 is regularly updated and playtested. To get the latest, full version please checkout
                 our discord and get in <a routerLink="/contact">contact!</a></p>
             <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
                 download>Download Preview</a>
+
+
+            <!-- Add a hover over the cover image where it darkens and says "Download" along with translucent SD20 Logo -->
+
+
+
+            <h3>The full book includes over 170 pages of resources, such as spells lists, equipment
+                and weapons lists, skill and ability trees, quick guides for leveling and building a character!</h3>
         </div>
-        <a href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf" download>
+        <a class="preview-cover" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf" download>
             <img src="assets/images/artwork/SoulsD20 Cover FINAL 72dpi.png">
         </a>
     </div>
-    <div class="cards">
+    <div style="display: flex; flex-direction: row; margin-bottom: 100px;">
+        <div class="book-preview">
+            <div class="preview">
+                <div id="previewPage1"></div>
+            </div>
+            <ul class="mini-pages">
+                <li class="mini-page">
+                    <div></div>
+                </li>
+                <li class="mini-page">
+                    <div></div>
+                </li>
+                <li class="mini-page">
+                    <div></div>
+                </li>
+            </ul>
+            <h3>Customized Builds!</h3>
+            <p>21 unique trees to mix and match abilities and synergies from!
+                21 unique trees to mix and match abilities and synergies from!
+                21 unique trees to mix and match abilities and synergies from!
+            </p>
+        </div>
+        <!-- <div>
+            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
+                download>Download Preview</a>
+            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
+                download>Download Preview</a>
+            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
+                download>Download Preview</a>
+        </div> -->
+    </div>
+    <div style="margin-bottom: 100px;">
+        <div class="book-preview">
+            <div class="preview">
+                <div id="previewPage2"></div>
+            </div>
+            <ul class="mini-pages">
+                <li class="mini-page">
+                    <div></div>
+                </li>
+                <li class="mini-page">
+                    <div></div>
+                </li>
+                <li class="mini-page">
+                    <div></div>
+                </li>
+            </ul>
+            <h3>7,458,924 Spells!</h3>
+            <p>21 unique trees to mix and match abilities and synergies from!
+                21 unique trees to mix and match abilities and synergies from!
+                21 unique trees to mix and match abilities and synergies from!
+            </p>
+        </div>
+    </div>
+    <div>
+        <div class="book-preview">
+            <div class="preview">
+                <div id="previewPage3"></div>
+            </div>
+            <ul class="mini-pages">
+                <li class="mini-page">
+                    <div></div>
+                </li>
+                <li class="mini-page">
+                    <div></div>
+                </li>
+                <li class="mini-page">
+                    <div></div>
+                </li>
+            </ul>
+            <h3>Master Weapon Skills!</h3>
+            <p>21 unique trees to mix and match abilities and synergies from!
+                21 unique trees to mix and match abilities and synergies from!
+                21 unique trees to mix and match abilities and synergies from!
+            </p>
+        </div>
+    </div>
+    <!-- <div class="cards">
         <img src="assets/images/artwork/WPNProfs_Page1.png">
         <div class="lefty">
             <h3>Customized Builds</h3>
@@ -39,5 +129,5 @@
             <h3>Learn combat skills from weapons!</h3>
             <p>Why let spellcasters have all the fun? Fuck em. Create your own spell list but with skills?</p>
         </div>
-    </div>
+    </div> -->
 </div>
