--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,16 +1,35 @@
 .footer {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    text-align: center;
-    height: 64px;
+    justify-content: space-between;
+    padding: 0 60px;
+    height: 100px;
     border-top: 1px solid #b99449;
     background: whitesmoke;
     color: rgba(0, 0, 0, 0.87);
 }
 .footer a {
     color: #b99449;
-    font-size: 1em;
+    font-size: 0.75rem;
     text-decoration: none;
     font-weight: 400;
+    cursor: pointer;
+}
+
+.footer p {
+    font-size: 0.75rem;
+    color: var(--black);
+    margin: 5px;
+}
+
+.main-logo {
+    height: 75px;
+    background-image: radial-gradient(black 40%, transparent 50%);
+    margin: 0 20px;
+}
+
+.social a {
+    text-align: center;
+    font-size: 1.5rem;
 }
