--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,16 @@
 #mainHeader {}
 
 /* border-bottom: 1.5px solid #b99933; */
-#mainHeader a {}
+#mainHeader a {
+    padding: 0 8px;
+}
 
 #mainHeader nav {
     justify-content: space-around;
     align-items: center;
+    text-align: center;
     display: flex;
+    flex-direction: row;
     margin: 0 20%;
 }
 
@@ -17,7 +21,7 @@ header nav {
 
 nav a {
     background-color: #b99933;
-    background-image: linear-gradient(45deg, #b99933, #cb8c34, #cf7030);
+    /* background-image: linear-gradient(45deg, #b99933, #cb8c34, #cf7030); */
     background-size: 100%;
     background-clip: text;
     -webkit-background-clip: text;
@@ -42,4 +46,5 @@ nav a {
     background-image: radial-gradient(black 40%, transparent 50%);
     margin-top: 25px;
     border: none;
+    margin-left: 30px;
 }
