--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,12 +1,18 @@
 .title {
+    height: 200px;
     background-position: 50% 60px;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 50%;
+    background-size: 800px;
     background-image: url("https://j-watt.github.io/souls-d20/assets/images/logos/SoulsD20 Title Color.png");
+    margin: 0;
+}
+.container {
+    padding: 0;
 }
 .content {
     border-top: 1.5px solid var(--gold);
+    padding-top: 50px;
 }
 #mainTitle {
     width: 100%;
@@ -20,11 +26,10 @@
 .cards img {
     width: 320px;
     height: 320px;
-}
-.cards img {
     border: 1.5px solid #b99449;
     border-radius: 3px;
 }
+
 .cards img::after {
     border: 1.5px solid #b99449;
     border-radius: 3px;
