--- a/src/app/play-info/play-info.component.css
+++ b/src/app/play-info/play-info.component.css
@@ -1,11 +1,106 @@
 .discord-widget {
     text-align: center;
 }
+
 .social {
     text-align: center;
 }
+
 p {
     max-width: 750px;
     text-align: center;
     margin: 20px auto;
+}
+
+.campaign {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+@media only screen and (min-width: 768px) {
+    .campaign {
+        flex-direction: row;
+    }
+}
+
+.campaign img {
+    width: 320px;
+    height: 320px;
+    border: 1.5px solid #b99449;
+    border-radius: 3px;
+}
+
+.campaign span {
+    margin-left: 60px;
+}
+
+.campaign p {
+    font-size: 1rem;
+    max-width: 500px;
+}
+
+mat-tab-group {
+    margin-bottom: 100px;
+    margin-top: 30px;
+}
+
+.testimonial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.testimonial-icon::before {
+    content: "";
+    width: 100px;
+    height: 100px;
+    background-image: radial-gradient(white 40%, transparent 50%);
+}
+
+.testimonial-icon {
+    width: 100px;
+    height: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: inline-block;
+    z-index: 1;
+}
+
+.testimonial span {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    background-image: radial-gradient(#444444 10%, transparent 70%);
+    position: relative;
+    bottom: 100px;
+    z-index: 0;
+}
+
+.testimonial-quote::before {
+    content: open-quote;
+    font-size: 2.5rem;
+    color: var(--gold);
+}
+
+.testimonial-quote::after {
+    content: close-quote;
+    font-size: 2.5rem;
+    color: var(--gold);
+}
+
+.testimonial-quote {
+    display: inline-block;
+    margin: 0 0 20px 0;
+    line-height: 40px;
+}
+
+.testimonial-name {
+    display: inline-block;
+    font-style: italic;
+    margin: 0 0 20px 0;
+    color: #9e9e9e;
+    font-size: 1.3rem;
 }
